--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-color: #ededed;
     }
   </style>
-  <title>app-scaffolding</title>
+  <title>App-scaffolding</title>
 </head>
 
 <body>
