--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 </head>
 
 <body>
-  <app-scaffolding></app-scaffolding>
+  <app-scaffolding>
+    <div id="outlet"></div>
+  </app-scaffolding>
 
   <script type="module" src="./src/app-scaffolding.js"></script>
 </body>
